--- a/flink-runtime-web/web-dashboard/src/app/pages/job/job.component.html
+++ b/flink-runtime-web/web-dashboard/src/app/pages/job/job.component.html
@@ -15,11 +15,15 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<flink-job-status [isLoading]="isLoading"></flink-job-status>
-<div class="content">
-  <nz-skeleton [nzActive]="true" *ngIf="isLoading"></nz-skeleton>
-  <div class="router" *ngIf="!isLoading">
-    <router-outlet></router-outlet>
+<ng-container *ngIf="!isError">
+  <flink-job-status [isLoading]="isLoading"></flink-job-status>
+  <div class="content">
+    <nz-skeleton [nzActive]="true" *ngIf="isLoading"></nz-skeleton>
+    <div class="router" *ngIf="!isLoading">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
+</ng-container>
+
+<nz-alert *ngIf="isError" nzShowIcon nzType="warning" nzMessage="Load Job Failed" nzDescription="There was an error during initialization the Job Detail"></nz-alert>
 
